# occp-core

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  LICENSE  OCCP_FORENSIC_AUDIT.md  OCCP_STATE.md  README.md  SECURITY.md  SPEC-GUIDE.md  alembic.ini  docker-compose.yml  llms.txt  pyproject.toml
.claude/: V080_FULL_AUDIT.md  V080_ONBOARDING_HANDOFF.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.planning/: ANTHROPIC_2026_Q2_INTEGRATION_RESEARCH.md  ARCHITECTURE.md  AUTO_DEV_VERDICT_2026-04-09.md  BRAIN_AGENT_ARCHITECTURE.md  CROSS-REFERENCE.md  DEEP_RESEARCH_BRAIN_ARCHITECTURE_2026.md  EU_AI_ACT_ART14_COMPLIANCE_MAPPING.md  FULL_AUDIT_REPORT_2026-03.md  L5_SELF_EVOLVING_ROADMAP.md  L6_COMPLETION_2026-04-08.md  L6_HANDOVER_2026-04-08.md  L6_MAXIMUM_STATE_2026-04-08.md  OCCP_100_PERCENT_CHECKLIST_2026-04-20.md  OCCP_10_OF_10_ROADMAP.md  OCCP_AI_FIRST_UX_2026.md  OCCP_DASHBOARD_10_2026.md  OCCP_DOCS_10_2026.md  OCCP_E2E_TEST_PROMPT.md  OCCP_FINAL_DELIVERY_PROMPT_v2.md  OCCP_FRAMEWORK_SIMPLIFICATION_2026.md  OCCP_HANDOFF_FINAL_2026-04-22.md  OCCP_LANDING_10_2026.md  OCCP_MCP_ECOSYSTEM_2026.md  OCCP_OBSERVABILITY_SRE_2026.md  OCCP_ONBOARDING_10_2026.md  OCCP_OPERATIONAL_DESCRIPTION_2026-04-09.md  OCCP_PYTHON_MODERNIZATION_2026.md  OCCP_SIMPLIFICATION_ANTHROPIC_2026.md  OCCP_WEB_10_OF_10_MASTER.md  OPENCLAW-GAP-ANALYSIS.md  OWASP_AGENTIC_TOP10_AUDIT_2026-04-20.md  PHASE1_PLAN.md  PROJECT.md  PROTOCOL_EVALUATION_2026.md  REQUIREMENTS.md  RESEARCH.md  RISK_REGISTER.md  ROADMAP.md  SECURITY_MAPPING.md  SESSION_1.md  (+2 more)
adapters/: __init__.py  basic_validator.py  browser_sandbox.py  channel_adapters.py  claude_planner.py  confirmation_gate.py  echo_planner.py  event_bridge.py  intent_router.py  log_shipper.py  managed_agents_client.py  mcp_bridge.py  mcp_client.py  mcp_cloudflare.py  mcp_github.py  mcp_playwright.py  mcp_slack.py  mcp_supabase.py  mcp_wordpress.py  mock_executor.py  model_router.py  multi_llm_planner.py  ollama_planner.py  openai_planner.py  openclaw_client.py  openclaw_executor.py  openclaw_planner.py  policy_gate.py  sandbox_executor.py  telegram_voice_bot.py  voice_handler.py  whisper_client.py
api/: __init__.py  app.py  auth.py  deps.py  logging_config.py  middleware.py  middleware_metrics.py  models.py  rbac.py  ws_manager.py
architecture/: README.md  agents.yaml  boundaries.yaml  dataflows.yaml  governance.yaml  issue_registry.yaml  runtime_inventory.yaml  services.yaml  tools.yaml
autodev/: __init__.py  approval_queue.py  orchestrator.py  rate_budget_tracker.py  residual_risk.py  sandbox_worktree.py  verification_gate.py
cli/: __init__.py  main.py  policy_test.py  skills.py
cli-create-app/: README.md  package-lock.json  package.json
config/: __init__.py  mcp-servers.json  occp.config.yaml.example  openclaw_agents.py  rbac_model.conf  rbac_policy.csv  settings.py
dash/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  DEEP_RESEARCH_VERIFICATION_2026.md  EU_AI_ACT_ALIGNMENT.md  GITHUB_MANUAL_STEPS.md  GLOBAL_AGENT_ECOSYSTEM_RESEARCH.md  MCP_PANEL_RESEARCH.md  OCCP_UNIQUE_DIFFERENTIATION_STRATEGY.md  OPENCLAW_COMPARISON.md  PHASE_1_2.md  QuickStart.md  ROADMAP_v080.md  SECRETS.md  SECTION_CLOSURE_BLOCK_V070.md  claude_code_commands.md  forgato_scenario.md
docs-next/: Dockerfile  README.md  package-lock.json  package.json  vercel.json
evaluation/: __init__.py  canary_engine.py  drift_detector.py  feature_flags.py  kill_switch.py  kill_switch_redis.py  proposal_generator.py  replay_harness.py  self_modifier.py
i18n/: AGENTS.md
landing/: index.html
landing-next/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
managed_agents/: README.md  deep_web_research.yaml
migrations/: env.py
news/: generate.js  index.html  style.css
observability/: __init__.py  anomaly_detector.py  behavior_digest.py  gen_ai_tracer.py  metrics_collector.py  otel_setup.py  phoenix_exporter.py
orchestrator/: __init__.py  adapter_registry.py  brain_flow.py  brain_stats.py  cloudcode_formatter.py  config_loader.py  cron_scheduler.py  event_emitter.py  exceptions.py  feedback_loop.py  learning_loop.py  message_pipeline.py  models.py  multi_agent.py  pipeline.py  project_manager.py  quality_gate.py  scheduler.py  sessions.py  skill_executor.py  skill_manifest.py  task_router.py  telegram_formatter.py
policy_engine/: __init__.py  abac.py  budget_policy.py  engine.py  exceptions.py  guards.py  ml_classifier.py  models.py  rate_limiter.py  trust_levels.py
prompts/: CLAUDE_PHASE_1_2_PROMPT.md
scripts/: brian-hook-config.json  cloudcode-hook.sh  deploy_v090.sh  install.sh  loadtest-brain.js  migrate_skills.py  onboard.sh  security-report.sh  verify_deploy.sh
security/: SECRETS_POLICY.md  __init__.py  agent_allowlist.py  break_glass.py  channel_auth.py  compliance.py  encryption.py  governance.py  input_sanitizer.py  provenance.py  revocation.py  runtime_verifier.py  sbom.py  scan_pipeline.py  siem_export.py  signing.py  skill_registry.py  supply_chain.py  vault.py
skills_v2/: MANIFEST.json  README.md  approval-gate.md  authority-positioning.md  b2b-offer-design.md  deep-web-research.md  elementor-section-build.md  fb-ad-copy.md  final-synthesis.md  hetzner-vps-setup.md  hungarian-premium-copy.md  monochrome-executive-style.md  multi-agent-planner.md  nextjs-build.md  partnership-fit-analysis.md  procurement-scan.md  pytest-generate.md  refactor-safe.md  sales-copy-framework.md  short-video-script.md  wordpress-plugin-architecture.md
store/: __init__.py  agent_store.py  approval_store.py  audit_merkle.py  audit_store.py  base.py  conversation_store.py  cost_calculator.py  database.py  engine.py  memory.py  models.py  onboarding_store.py  task_store.py  token_store.py  user_store.py  workflow_store.py
tests/: test_abac.py  (+108 more)
(+390 files in other folders)
