[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occp"
version = "0.8.2"
description = "OpenCloud Control Plane – Agent Control Plane platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Azar Management Consulting", email = "azaroccp@gmail.com"},
]
keywords = ["agent", "control-plane", "orchestrator", "policy", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "click>=8.1",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "PyJWT>=2.8",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "casbin>=1.36",
    "structlog>=24.1",
    "cryptography>=43.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
llm-all = ["occp[llm,openai]"]
postgres = ["asyncpg>=0.29"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "httpx>=0.27"]
all = ["occp[llm-all,postgres,dev]"]

[project.scripts]
occp = "cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["orchestrator*", "policy_engine*", "cli*", "sdk*", "adapters*", "api*", "config*", "store*"]
